[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Effects/AfterImageCreator.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 14.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 13.5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 33
collision_mask = 4129
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -19.9375 )
scale = Vector2( 0.541016, 0.626953 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="CarryPosition" type="Position2D" parent="."]
position = Vector2( 0, -36 )

[node name="TackleArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TackleArea"]
position = Vector2( 0, -10.5 )
shape = SubResource( 2 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AfterImageCreator" parent="." instance=ExtResource( 3 )]
spritePath = NodePath("../Sprite")

[connection signal="area_entered" from="TackleArea" to="." method="_on_TackleArea_area_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
